--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                                 Unna Junná | Areena | yle.fi
                             </h4>
                             <p>
-                                Rock Bohccot - After Effects 2D animation Project.
+                                Rock Bohccot - After Effects 2D animation Project. Understanding layout, composition, color theory, and visual language.
                             </p>
                         </div>
                     </div>
@@ -614,7 +614,7 @@
                                 Yle Sápmi
                             </h4>
                             <p>
-                                Sound monitoring project at YLE Studio. Unna Junná Production Team.
+                                Sound monitoring project at Inari YLE Studio. Unna Junná Production Team.
                             </p>
                         </div>
                     </div>
@@ -643,7 +643,7 @@
                                 Puijo Restaurants
                             </h4>
                             <p>
-                                Hotel and Restaurant Management Projects. Kuopio | Finland
+                                Handling difficult situations with guests and staff, thoroughness in all tasks, clear verbal/written skills.
                             </p>
                         </div>
                     </div>
@@ -656,7 +656,7 @@
                                 Hotel Savonia
                             </h4>
                             <p>
-                                Hotel and Restaurant Management Projects. Kuopio | Finland
+                                Creating a welcoming atmosphere, maintaining composure in fast-paced environments, ensuring guest satisfaction and handling feedback.
                             </p>
                         </div>
                     </div>
@@ -669,7 +669,7 @@
                                 Hotel Nuuksio
                             </h4>
                             <p>
-                                Digital Marketing Plan Project. Espoo | Finland
+                                Digital Marketing Plan Project. Understanding brand voice and positioning. Crafting narratives that connect with audiences.
                             </p>
                         </div>
                     </div>
@@ -683,7 +683,7 @@
                                 Salmar ASA
                             </h4>
                             <p>
-                                Fiskeproduksjons Project | Frøya, Norge
+                                Fiskeproduksjons project, quality control, safety procedures, material handling, communication, teamwork, time management.
                             </p>
                         </div>
                     </div>
@@ -705,7 +705,7 @@
                                 Innovation & VISION
                             </h4>
                             <p>
-                            Driving progress and bringing new and imaginative ideas into reality.
+                            Driving progress and bringing new and imaginative ideas into reality. Generating original ideas, seeing problems from multiple perspectives, and envisioning new possibilities.
                             </p>
                         </div>
                     </div>
@@ -717,7 +717,7 @@
                                 Critical Thinking
                             </h4>
                             <p>
-                            Analyzing information and situations objectively to form a judgment.
+                            Analyzing information and situations objectively to form a judgment. Drawing logical conclusions from available data and knowledge.
                             </p>
                         </div>
                     </div>
@@ -741,7 +741,7 @@
                                 Learning agility
                             </h4>
                             <p>
-                            Staying current with trends and technology
+                            Staying current with trends and technology. Analyzing information objectively to form a judgment.
                             </p>
                         </div>
                     </div>
@@ -753,7 +753,8 @@
                                 Project Management
                             </h4>
                             <p>
-                            Budgeting, time management, organization and meeting deadlines
+                            Budgeting, time management, organization and meeting deadlines. Identifying issues and finding effective solutions. 
+                            Persuading and resolving conflicts.
                             </p>
                         </div>
                     </div>
@@ -767,7 +768,7 @@
                                 Decision Making
                             </h4>
                             <p>
-                            Clear verbal and written communication with teams and clients
+                            Clear verbal and written communication with teams and clients. Objectively evaluating information, arguments, and assumptions.
                             </p>
                         </div>
                     </div></div>
