--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
 
 
         
-                    </div>  <br>&nbsp;
+                    </div>  <br><br>&nbsp;
 
                     <div class="main-title">
                         <h2><i class="fa-solid fa-crown"></i><span> OCCUPATIONAL</span><span class="bg-text"></span> SKILLS</h2>
@@ -771,7 +771,7 @@
                             Clear verbal and written communication with teams and clients. Objectively evaluating information, arguments, and assumptions.
                             </p>
                         </div>
-                    </div></div>
+                    </div></div><br><br>
 
             <h4 class="stat-title">Media Production Skills</h4>
 
@@ -796,7 +796,7 @@
                                 Video & AUDIO Editing
                             </h4>
                             <p>
-                            Collaborating effectively and guiding projects
+                            Collaborating effectively and guiding projects.
                             </p>
                         </div>
                     </div>
@@ -808,7 +808,7 @@
                                 Photo Editing & Design
                             </h4>
                             <p>
-                            Adobe CC Photoshop, AI Utilization
+                            Adobe CC Photoshop, AI Utilization.
                             </p>
                         </div>
                     </div>
@@ -820,7 +820,7 @@
                                 Visual Design & Animations
                             </h4>
                             <p>
-                            Adobe CC, Creating engaging graphics, animations, and layouts
+                            Adobe CC, Creating engaging graphics, animations, and layouts.
                             </p>
                         </div>
                     </div>
@@ -832,7 +832,7 @@
                                 Screen Printing
                             </h4>
                             <p>
-                            Silk Screen Printing, Foil Printing & Embroidery
+                            Silk Screen Printing, Foil Printing & Embroidery.
                             </p>
                         </div>
                     </div>
@@ -845,7 +845,7 @@
                                 Web Development & Design
                             </h4>
                             <p>
-                            Visual Studio Code, WordPress, Figma, Working effectively with teams
+                            Visual Studio Code, WordPress, Figma, Working effectively with teams.
                             </p>
                         </div>
                     </div></div>
@@ -1359,9 +1359,9 @@
 
                 <div class="contact-content-con">
                     <div class="left-contact">
-                        <h4>Get Connected!</h4>
+                        <h4>Jarno Kiimala - Web Developer</h4>
                         <p>
-                            <p style="color:var(--color-secondary)">• 4 Absolut Business Success •</p>
+                            <p style="color:var(--color-secondary)">• Contact 4 Absolut Business Success •</p>
                         
                         <div class="contact-info">
                             <div class="contact-item">
