--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@
 
                 <div class="contact-content-con">
                     <div class="left-contact">
-                        <h4>Jarno Kiimala - Web Developer</h4>
+                        <h4>Jarno Kiimala • Web Developer</h4>
                         <p>
                             <p style="color:var(--color-secondary)">• Contact 4 Absolut Business Success •</p>
                         
@@ -1385,7 +1385,7 @@
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fa-solid fa-user-graduate"></i>
-                                    <span>Education</span>
+                                    <span>Education • Degree</span>
                                 </div>
                                 <p>
                                     Industrial Management Engineer
