--- a/index.html
+++ b/index.html
@@ -474,7 +474,8 @@
                                 IMS
                             </h4>
                             <p>
-                                Electronics testing process operations of IBM Products. Daily workplace communication in English.
+                                Electronics testing process operations of IBM Products. Daily workplace communication in English. 
+                                Performing checks, identifying defects, and ensuring products meet standards.
                             </p>
                         </div>
                     </div>
@@ -537,7 +538,7 @@
                                 The Committee for the Future
                             </h4></a>
                             <p>
-                                The Wisconsin Project, Helsinki - Madison | The Parliament of Finland
+                                The Wisconsin Project. Helsinki - Madison, WI | The Parliament of Finland
                             </p>
                         </div>
                     </div>
@@ -623,7 +624,8 @@
                                 Yle Sápmi
                             </h4>
                             <p>
-                                Sound monitoring project at Inari YLE Studio. Unna Junná Production Team.
+                                Sound monitoring project at Inari YLE Studio. Unna Junná Production Team. Operating sound 
+                                level meters (SLMs), analyzers, digital/analog consoles, microphones, and software.
                             </p>
                         </div>
                     </div>
@@ -636,7 +638,7 @@
                                 Skábmagovat Film Festival
                             </h4>
                             <p>
-                                Aanaar | Inari | Finland
+                                Staying current with industry shifts and audience preferences. Providing clear feedback and articulating vision.
                             </p>
                         </div>
                     </div>
@@ -793,7 +795,7 @@
                                 Video Shoot & Storyboard
                             </h4>
                             <p>
-                            Developing a narrative and planning the visual flow of the project. 
+                            Developing a narrative and planning the visual flow of the project. Collaborating with others to create the film or video product.
                             </p>
                         </div>
                     </div>
@@ -805,7 +807,7 @@
                                 Video & AUDIO Editing
                             </h4>
                             <p>
-                            Collaborating effectively and guiding projects.
+                            Collaborating effectively and guiding projects. Proficiency with various editing software. Adding effects like music, captions, graphics, alt text.
                             </p>
                         </div>
                     </div>
@@ -817,7 +819,8 @@
                                 Photo Editing & Design
                             </h4>
                             <p>
-                            Adobe CC Photoshop, AI Utilization.
+                            Improving composition and fixing horizons to remove distractions. 
+                            Enhancing detail and cleaning up digital grain. 
                             </p>
                         </div>
                     </div>
@@ -829,7 +832,8 @@
                                 Visual Design & Animations
                             </h4>
                             <p>
-                            Adobe CC, Creating engaging graphics, animations, and layouts.
+                            Creating engaging graphics, animations, and layouts. Understanding narrative, emotion, body language
+                             and timing to make characters believable and engaging.
                             </p>
                         </div>
                     </div>
@@ -841,7 +845,7 @@
                                 Screen Printing
                             </h4>
                             <p>
-                            Silk Screen Printing, Foil Printing & Embroidery.
+                            Silk Screen Printing, Foil Printing & Embroidery. Applying emulsion evenly, exposing, and washing out screens accurately, ensuring proper drying.
                             </p>
                         </div>
                     </div>
@@ -854,8 +858,9 @@
                                 Web Development & Design
                             </h4>
                             <p>
-                            Visual Studio Code, WordPress, Figma, Working effectively with teams.
-                            </p>
+                            Visual Studio Code, WordPress, Figma, Working effectively with clients and teams. 
+                            Adapting to new technologies and frameworks.
+                            </p><br><br><br><br>
                         </div>
                     </div></div>
                     
