--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     
-    <meta name="description" content="Artificial Intelligence, AI Powered Full Stack Web Development, 3D Modeling - SolidWorks - Inventor Pro, Industrial Engineering, Strategic Project Management">
+    <meta name="description" content="Artificial Intelligence, AI Powered Full Stack Web Development, 3D Modeling - SolidWorks - Inventor Pro, 
+    Industrial Engineering, Strategic Project Management">
     <meta name="keywords" content="Tekoäly, AI, Verkkosivustojen kehitys, Verkkosivustojen suunnittelupalvelut, HTML, CSS, JavaScript, WordPress,
-    Verkkokauppasivustojen kehitys, Responsiivinen verkkosuunnittelu, SEO (Search Engine Optimization), Software Developer, koodari, Tornio, Suomi, Finland, Oulu, full-stack, insinööri, tuotantotalous, Digitaalinen Media, Luova Sisällöntuotanto">
+    Verkkokauppasivustojen kehitys, Responsiivinen verkkosuunnittelu, SEO (Search Engine Optimization), Software Developer, koodari, Tornio, Suomi, 
+    Finland, Oulu, full-stack, insinööri, tuotantotalous, Digitaalinen Media, Luova Sisällöntuotanto">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
@@ -33,8 +35,24 @@
   gtag('config', 'G-BM6EWY7VB4');
 </script>
 
+<script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/7629316a628c9.js" 
+data-cmp-host="b.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="0"></script>
+
 
 <body class="main-content">
+
+<amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
+  <script type="application/json">
+    {
+      "postPromptUI": "postPromptUI",
+      "clientConfig": {
+        "cdid": "7629316a628c9",
+        "params": ""
+      }
+    }
+  </script>
+  
+</amp-consent>
    
     
     <header class="container header active" id="home">
