--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@
                             KaMa-Palvelut Oy
                             </h4></a>
                             <p>
-                                Marketing Research of Steel
-                                Abrasive Blast Room and Powder Coat Booth. Remote Project.
+                                Bachelor of Engineering Thesis. The aim of the
+                                study was to clarify the market area of the steel abrasive blast room and powder coat booth.
                             </p>
                         </div>
                     </div>
@@ -537,7 +537,7 @@
                                 The Committee for the Future
                             </h4></a>
                             <p>
-                                The Wisconsin Project. Helsinki - Madison, WI | The Parliament of Finland
+                                The Wisconsin Project. Helsinki - Madison, WI | The Parliament of Finland.
                             </p>
                         </div>
                     </div>
@@ -716,7 +716,8 @@
                                 Innovation & VISION
                             </h4>
                             <p>
-                            Driving progress and bringing new and imaginative ideas into reality. Generating original ideas, seeing problems from multiple perspectives, and envisioning new possibilities.
+                            Driving progress and bringing new and imaginative ideas into reality. 
+                            Generating original ideas, seeing problems from multiple perspectives, and envisioning new possibilities.
                             </p>
                         </div>
                     </div>
@@ -779,7 +780,8 @@
                                 Decision Making
                             </h4>
                             <p>
-                            Clear verbal and written communication with teams and clients. Objectively evaluating information, arguments, and assumptions.
+                            Clear verbal and written communication with teams and clients. 
+                            Objectively evaluating information, arguments, and assumptions.
                             </p>
                         </div>
                     </div></div><br><br>
@@ -795,7 +797,8 @@
                                 Video Shoot & Storyboard
                             </h4>
                             <p>
-                            Developing a narrative and planning the visual flow of the project. Collaborating with others to create the film or video product.
+                            Developing a narrative and planning the visual flow of the project. 
+                            Collaborating with others to create the film or video product.
                             </p>
                         </div>
                     </div>
@@ -807,7 +810,8 @@
                                 Video & AUDIO Editing
                             </h4>
                             <p>
-                            Collaborating effectively and guiding projects. Proficiency with various editing software. Adding effects like music, captions, graphics, alt text.
+                            Collaborating effectively and guiding projects. 
+                            Proficiency with various editing software. Adding effects like music, captions, graphics, alt text.
                             </p>
                         </div>
                     </div>
@@ -845,7 +849,8 @@
                                 Screen Printing
                             </h4>
                             <p>
-                            Silk Screen Printing, Foil Printing & Embroidery. Applying emulsion evenly, exposing, and washing out screens accurately, ensuring proper drying.
+                            Silk Screen Printing, Foil Printing & Embroidery. 
+                            Applying emulsion evenly, exposing, and washing out screens accurately, ensuring proper drying.
                             </p>
                         </div>
                     </div>
@@ -1118,7 +1123,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>The Stray Cats</h3>
+                        <h3>The Stray Cats - Demo Website</h3>
                         <div class="icons">
                            <a href="https://racingdevil.netlify.app/" id="The Stray Cats" target="_blank" class="icon">
                                 <i class="fas fa-link"></i></a> 
@@ -1150,7 +1155,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Website Demo</h3>
+                        <h3>Demo Website</h3>
                         <div class="icons">
                             <a href="https://hairdude.netlify.app/" id="Hair Dude" target="_blank" class="icon">
                                 <i class="fas fa-link"></i></a>
@@ -1180,7 +1185,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Website Demo</h3>
+                        <h3>Demo Website</h3>
                         <div class="icons">
                             <a href="https://nbwebsite.netlify.app/" id="NBwebsite" target="_blank" class="icon">
                                 <i class="fas fa-link"></i></a>
