--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     
     <meta name="description" content="AI Powered Full Stack Web Development & Digital Media Production, 
     Industrial Engineering and Management, Artificial Intelligence">
-    <meta name="keywords" content="Multimedia, Design, Website, WordPress, Software Developer, Python, Digital Media, AI,
+    <meta name="keywords" content="Multimedia, Design, Website, WordPress, Software Developer, Project, Digital Media, AI,
     Full Stack Web Development, Industrial Engineering and Management">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
