--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <!-- <p class="tl-duration">2023</p> -->
                     <h5>Python Programming<span> - The University of Helsinki | The Department of CS</span></h5>
-                    <img src="img/unihki.webp" alt="University of Helsinki - Jarno Kiimala - Python">
+                    <img src="img/python.webp" alt="University of Helsinki - Jarno Kiimala - Python">
                     <p>
                         MOOC 1-7 & 8-14 | Introduction to Python Programming + Advanced Course
                         in Python Programming.
