--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     Full Stack Web Development, Industrial Engineering and Management">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <meta http-equiv="Cache-Control" content="max-age=31536000">
    
     <title>Jarno Kiimala | AI Powered Full Stack Development</title>
 
