--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="apple-touch-icon" sizes="152x152" href="https://img.icons8.com/color/152x152/anonymous-mask.png">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com" media="print" onload="this.media='all'">
+
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <meta name="google-site-verification" content="X73pKd22sUMAi-ti_wOb3d_HwjY92Vx-km-NPkTQUqc">
