--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="contact-container">
                 <div class="main-title">
 
-                    <h2><span>Contact </span> Information!<span class="bg-text"></span></h2>
+                    <h2><span>Let's </span> Connect!<span class="bg-text"></span></h2>
                     <h2><br></span><span><i class="fa-solid fa-sack-dollar fa-xl" aria-hidden="true"></i></span><span class="bg-text"></span></h2>
                 </div>
                 
@@ -1441,13 +1441,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <i class="fa-brands fa-x-twitter"></i>
                             </a>
 
+                            <a href="javascript:void(0)" 
+                                onclick="window.location.href='mailto:' + 'jarno.kiimala' + '@' + 'proton.me'">
+                                <i class="fas fa-envelope"></i>
+                            </a>
+
                             <!--<a href="https://www.instagram.com/jarnokiimala" target="_blank">
                                 <i class="fab fa-instagram"></i> 
-                            </a>-->
+                            </a>
 
                             <a href="https://discord.com/users/coderheader" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-discord"></i>
-                            </a>
+                            </a>-->
 
                             <a href="https://replit.com/refer/jkiimala" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-solid fa-rocket"></i>
@@ -1470,7 +1475,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 
                             </div>
                             <p>
-                                    <p style="color:var(--color-secondary)">© 2026 Kiimala. All rights reserved.
+                                    <p style="color:var(--color-secondary)">© 2026 Kiimala. All Rights Reserved.
                                 </p>
                         </div>
                     </div>
