--- a/index.html
+++ b/index.html
@@ -1442,7 +1442,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </a>
 
                             <a href="javascript:void(0)" 
-                                onclick="window.location.href='mailto:' + 'jarno.kiimala' + '@' + 'proton.me'">
+                                onclick="lahetaPostia('jarno.kiimala', 'proton.me')" 
+                                style="text-decoration: none; color: inherit;">
                                 <i class="fas fa-envelope"></i>
                             </a>
 
