--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fa-solid fa-user-graduate"></i>
-                                    <span>Education • Degree</span>
+                                    <span>Education</span>
                                 </div>
                                 <p>
                                     Industrial Management Engineer
