--- a/index.html
+++ b/index.html
@@ -1413,6 +1413,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     Digital Nomad • Global • Online
                                 </p>
                             </div>
+
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-envelope"></i>
@@ -1422,6 +1423,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     jarno.kiimala&commat;proton.me
                                 </p>
                             </div>
+
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fa-solid fa-user-graduate"></i>
@@ -1471,7 +1473,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </a>-->
 
                             <a href="https://replit.com/refer/jkiimala" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-solid fa-rocket"></i>
+                                <i class="fa-solid fa-face-smile"></i>
                             </a>
 
                             
