--- a/index.html
+++ b/index.html
@@ -124,8 +124,46 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce">
                         <div class="carousel-item" role="listitem"><img src="img/shopify.webp" alt="Shopify">
                         <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
+                        <!-- KOPIOT (Samat logot uudestaan saumatonta siirtymää varten) -->
+                        <div class="carousel-item" role="listitem"><img src="img/html.webp" alt="html">
+                        <div class="carousel-item" role="listitem"><img src="img/css.webp" alt="CSS">
+                        <div class="carousel-item" role="listitem"><img src="img/JS.webp" alt="JavaScript">
+                        <div class="carousel-item" role="listitem"><img src="img/bootstrap.webp" alt="bootstrap">
+                        <div class="carousel-item" role="listitem"><img src="img/pythonlogo.webp" alt="python">
+                        <div class="carousel-item" role="listitem"><img src="img/reactlogo.webp" alt="react">
+                        <div class="carousel-item" role="listitem"><img src="img/tailwind.webp" alt="tailwind">
+                        <div class="carousel-item" role="listitem"><img src="img/sass.webp" alt="sass">
+                        <div class="carousel-item" role="listitem"><img src="img/visualstudio.webp" alt="vscode">
+                        <div class="carousel-item" role="listitem"><img src="img/aistudio.webp" alt="aistudio">
+                        <div class="carousel-item" role="listitem"><img src="img/LeapAI.webp" alt="Leap ai">
+                        <div class="carousel-item" role="listitem"><img src="img/replit.webp" alt="replit ai">
+                        <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="chatgpt ai">
+                        <div class="carousel-item" role="listitem"><img src="img/bolt.webp" alt="bolt.new ai">
+                        <div class="carousel-item" role="listitem"><img src="img/github.webp" alt="github">
+                        <div class="carousel-item" role="listitem"><img src="img/git.webp" alt="git">
+                        <div class="carousel-item" role="listitem"><img src="img/githubCopilot.webp" alt="githubCopilot">
+                        <div class="carousel-item" role="listitem"><img src="img/mongodb.webp" alt="mongoDB">
+                        <div class="carousel-item" role="listitem"><img src="img/jira.webp" alt="jira">
+                        <div class="carousel-item" role="listitem"><img src="img/trello.webp" alt="trello">
+                        <div class="carousel-item" role="listitem"><img src="img/miro.webp" alt="miro">
+                        <div class="carousel-item" role="listitem"><img src="img/slack.webp" alt="slack">
+                        <div class="carousel-item" role="listitem"><img src="img/discord.webp" alt="discord">
+                        <div class="carousel-item" role="listitem"><img src="img/solikkalogo.webp" alt="solidworks">
+                        <div class="carousel-item" role="listitem"><img src="img/inventorlogo.webp" alt="inventorPro">
+                        <div class="carousel-item" role="listitem"><img src="img/adobelogo.webp" alt="adobeCC">
+                        <div class="carousel-item" role="listitem"><img src="img/AE.webp" alt="adobeAfterEffects">
+                        <div class="carousel-item" role="listitem"><img src="img/AI.webp" alt="adobeIllustrator">
+                        <div class="carousel-item" role="listitem"><img src="img/PR.webp" alt="adobePremierePro">
+                        <div class="carousel-item" role="listitem"><img src="img/PS.webp" alt="adobePhotoshop">
+                        <div class="carousel-item" role="listitem"><img src="img/canva.webp" alt="canva">
+                        <div class="carousel-item" role="listitem"><img src="img/officelogo.webp" alt="office">
+                        <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress">
+                        <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce">
+                        <div class="carousel-item" role="listitem"><img src="img/shopify.webp" alt="Shopify">
+                        <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
                     </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
-                </div></div></div></div></div></div></div></div></div>
+                </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
+                </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
                 </div></div>
 
             <br><br> 
