--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
-    <meta name="description" content="AI-Powered Full Stack Web Development & Digital Media Production, 
-    Industrial Engineering and Management Utilizing Artificial Intelligence.">
+    <meta name="description" content="Where Imagination Meets Intelligence. 
+    Revolutionizing storytelling with AI-powered media production. Creating boundary-breaking content at the speed of thought. We define the future.">
     <meta name="keywords" content="Kiimala, Design, Website, Skills, Software, Project, Production, AI, Development, Engineering">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,11 +41,11 @@
      <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@JKiimala" />
     <meta name="twitter:title" content="Vibe Coding" />
-    <meta name="twitter:description" content="AI Powered Full Stack Development & Vibe Coding." />
+    <meta name="twitter:description" content="Jarno Kiimala | The Next Era of AI Content Creation." />
     <meta name="twitter:image" content="https://jkiimala.github.io/" />
 
    
-    <title>Jarno Kiimala | AI-Powered Digital Media Creation for Businesses.</title>
+    <title>Jarno Kiimala | The Next Era of AI Content Creation.</title>
 
 
     <link rel="canonical" href="https://jkiimala.github.io/">
