--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                         <div class="blog-text">
                             
                             <h4>
-                                Houlihan´s
+                                Houlihan's Restaurant
                             </h4></a>
                             <p>
                                 Following established recipes to ensure consistency. 
@@ -632,7 +632,7 @@
                         <div class="blog-text">
                             
                             <h4>
-                                Uni Madison
+                                The University of Madison
                             </h4></a>
                             <p>
                                 The Wisconsin Project. Effective, clear communication. Ability to adjust plans based on new information.
